--- a/UBomb22-student-main/rapport/rapport.tex
+++ b/UBomb22-student-main/rapport/rapport.tex
@@ -112,9 +112,11 @@ Ce projet vise à utiliser Java pour implémenter les fonctions de base du jeu c
 
 \indent Dans le jeu, le personnage contrôlé par le joueur lâche une bombe qui attaquera l'ennemi avec une explosion en forme de croix après un délai. Dans le même temps, la bombe du personnage peut également détruire la boîte pour obtenir les accessoires à l'intérieur, qui peuvent être utilisés pour augmenter ou réduire la portée d'explosion de la bombe, ou pour restaurer sa propre santé.
 
-\indent Le jeu est principalement un mode de franchissement de niveau. Vous pouvez obtenir des points en battant des ennemis. Une fois que les points ont atteint le niveau cible, vous pouvez accéder au niveau suivant. Au fur et à mesure que le niveau progresse, les ennemis deviendront de plus en plus forts et les dégâts qu'ils causeront au joueur deviendront de plus en plus importants.
+\indent Le jeu propose un mode révolutionnaire et le but principal est de sauver la dernière princesse. Les joueurs doivent collecter des buffs dans chaque niveau, vaincre les ennemis, obtenir des clés et ouvrir la porte au niveau suivant, afin d'atteindre le dernier niveau étape par étape, trouver la princesse et la sauver.
 
-\indent Le jeu implémente également un mode à deux joueurs. Dans ce mode, les joueurs doivent non seulement attaquer des monstres, mais également faire attention aux attaques d'un autre joueur. Ce mode consiste également à collecter suffisamment de points pour gagner, ou pour réduire la santé d'un autre joueur à zéro.
+\indent Le jeu implémente également un mode à deux joueurs. Dans ce mode, la condition de victoire du joueur est de réduire à zéro la santé d'un autre joueur.
+
+\indent Le jeu implémente également un mode points, et la condition de victoire est d'obtenir suffisamment de points.
 
 \indent LACK OF technologies utilisées
 
