--- a/UBomb22-student-main/rapport/rapport.tex
+++ b/UBomb22-student-main/rapport/rapport.tex
@@ -159,6 +159,12 @@ L'architecture de ce projet est la suivante :
 
 \end{itemize}
 
+\section{Présentation Visuelle}
+
+\indent
+
+8
+
 \section{Algorithme}
 
 \subsection{Map Compression/Decompression}
