--- a/UBomb22-student-main/rapport/rapport.tex
+++ b/UBomb22-student-main/rapport/rapport.tex
@@ -159,6 +159,24 @@ L'architecture de ce projet est la suivante :
 
 \end{itemize}
 
+\indent Le cycle de vie principal du jeu est le suivant :
+
+\begin{figure}[htbp]
+    \begin{center}
+        \includegraphics[height=5.5cm]{./src/cycle.png}
+    \end{center}
+\end{figure}
+
+\indent De plus, afin de mieux comprendre la relation entre les Objets, j'ai dessiné le diagramme UML suivant :
+
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[height = 23cm]{./src/UML_Class.png}
+    \end{center}
+\end{figure}
+
+\pagebreak
+
 \section{Présentation Visuelle}
 
 \indent
